--- a/appointment.html
+++ b/appointment.html
@@ -4,58 +4,8 @@
 <head>
     <title>Appointment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial;
-            background: #f5f8fc;
-        }
+<link rel="stylesheet" href="css/appointment.css">
 
-        header {
-            background: #0b6bb8;
-            color: white;
-            padding: 15px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .back {
-            color: white;
-            text-decoration: none;
-            font-size: 16px;
-        }
-
-        .box {
-            width: 90%;
-            max-width: 600px;
-            margin: 35px auto;
-            padding: 25px;
-            background: white;
-            border-radius: 14px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.07);
-        }
-
-        input,
-        select {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border-radius: 6px;
-            border: 1px solid #cbd5e1;
-        }
-
-        .btn {
-            width: 100%;
-            padding: 12px;
-            background: #0b6bb8;
-            color: white;
-            border-radius: 6px;
-            border: none;
-            cursor: pointer;
-            margin-top: 15px;
-        }
-    </style>
 </head>
 
 <body>
@@ -98,6 +48,7 @@
         <button class="btn">Submit</button>
 
     </div>
+<script src="js/appointment.js"></script>
 
 </body>
 
